<resources>
    <string name="app_name">GroupProject</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="sample_name">Sample Name</string>
    <string name="no_biography_available">No Biography Available</string>
    <string name="add_friends_button">Add Friends Button</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="settings_button">Setttings Button</string>
    <string name="username">Username</string>
    <string name="search_button">search button</string>
    <string name="map_fragment">String</string>
    <string name="add_post">String</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="cancel">cancel</string>
    <string name="describe_the_picture">Describe the Picture</string>
    <string name="draft">draft</string>
    <string name="location_of_the_image">location of the image</string>
    <string name="post">post</string>
    <string name="description">description</string>
    <string name="location">location</string>
    <string name="upload_image">Upload Image</string>
    <string name="Dislike">Dislike</string>
    <string name="Like">Like</string>
    <string name="Comments">Comments</string>
    <string name="comment_section">Comment Section</string>
    <string name="Description">Description</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="test">test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_settings">settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Settings</string>
    <string name="second_fragment_label">Security Check</string>
    <string name="next">Update Profile</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_update">update</string>
    <string name="textview">WARNING: This will delete your Account. This is irreversible</string>
    <string name="Terms">Terms: Signed up users are responsible for behavior.
        Your data is stored by google firebase
        We are not liable for any breaches of data

    </string>
</resources>