<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostActivity">

    <ImageView
        android:id="@+id/addImage"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/location"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="25dp"
        android:hint="@string/location"
        android:gravity="center"
        android:inputType="text"
        android:background="@color/lightGray"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="@id/addImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/description"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_below="@id/addImage"
        android:layout_alignBottom="@id/addImage"
        android:layout_marginStart="50dp"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="50dp"
        android:background="@color/lightGray"
        android:gravity="center"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="159dp"
        android:backgroundTint="@color/green"
        android:text="@string/post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/locationView"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="12dp"
        android:text="@string/location_of_the_image"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="5dp"
        android:text="@string/describe_the_picture"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addImage" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/red"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <Button
        android:id="@+id/uploadImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_transparent"
        android:text="@string/upload_image"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/addImage"
        app:layout_constraintEnd_toEndOf="@+id/addImage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/addImage"
        app:layout_constraintTop_toTopOf="@+id/addImage"
        app:layout_constraintVertical_bias="1.0" />

    <!--
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="409dp"
        android:layout_height="336dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/map_navigation" />
    -->

</androidx.constraintlayout.widget.ConstraintLayout>