<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InspectPostActivity">

    <ImageView
        android:id="@+id/usersImage"
        android:layout_width="311dp"
        android:layout_height="170dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="449dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/locationView"
        android:layout_width="327dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/location"
        app:layout_constraintBottom_toTopOf="@id/usersImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="378dp"
        android:layout_height="76dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="250dp"
        android:background="@color/lightGray"
        android:gravity="center"
        android:text="@string/Description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/editTextTextPersonName"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="290dp"
        android:ems="10"
        android:text="@string/Description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usersImage" />

    <Button
        android:id="@+id/backArrow"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="96dp"
        android:layout_marginBottom="449dp"
        app:icon="@drawable/ic_baseline_chevron_left_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/usersImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/forwardArrow"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="96dp"
        android:layout_marginBottom="449dp"
        app:icon="@drawable/ic_baseline_chevron_right_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/usersImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/commentSection"
        android:layout_width="271dp"
        android:layout_height="88dp"
        android:layout_marginTop="25dp"
        android:background="@color/lightGray"
        android:gravity="center"
        android:text="@string/comment_section"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintVertical_bias="0.54" />

    <TextView
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:gravity="center"
        android:text="@string/Comments"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintVertical_bias="0.272" />

    <Button
        android:id="@+id/likeButton"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="365dp"
        android:backgroundTint="@color/blue"
        android:icon="@drawable/ic_baseline_thumb_up_24"
        android:text="@string/Like"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usersImage" />

    <Button
        android:id="@+id/dislikeButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="365dp"
        android:backgroundTint="@color/red"
        android:icon="@drawable/ic_baseline_thumb_up_24"
        android:text="@string/Dislike"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usersImage" />

    <TextView
        android:id="@+id/likeIncrementer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="365dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dislikeButton"
        app:layout_constraintStart_toEndOf="@+id/likeButton"
        app:layout_constraintTop_toBottomOf="@+id/usersImage" />

    <TextView
        android:id="@+id/dislikeIncrementer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="365dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dislikeButton"
        app:layout_constraintTop_toBottomOf="@+id/usersImage" />

</androidx.constraintlayout.widget.ConstraintLayout>